added info into swagger and fix tests